--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Download Section -->
     <section class="download-wrapper">
-      <a href="https://drive.usercontent.google.com/u/0/uc?id=1LdhjsgJdZgztAOftH5cqBb_roppJZqyG&export=download" download class="download-button">Download</a>
+      <a href="https://gofile.io/d/jKhYjL" download class="download-button">Download</a>
     </section>
 
     <!-- Footer/Error Section -->
