--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Download Section -->
     <section class="download-wrapper">
-      <a href="https://gofile.io/d/jKhYjL" download class="download-button">Download</a>
+      <a href="https://discord.gg/GqMtcP7f4A" download class="download-button">Download</a>
     </section>
 
     <!-- Footer/Error Section -->
